--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
     "sequelize": "^6.29.0",
     "sqlite3": "^5.1.4",
