--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc -w\"  \"nodemon dist/index.js\" "
+    "dev": "concurrently \"npx tsc -w\"  \"nodemon dist/server.js\" "
   },
   "keywords": [],
   "author": "",
