--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "bcrypt": "^5.1.0",
+    "commander": "^10.0.0",
     "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
