--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc -w\"  \"nodemon dist/server.js\" "
+    "build": "rimraf dist && npx tsc",
+    "prestart": "npm run build",
+    "start": "node dist/src/index.js",
+    "preserve": "npm run build",
+    "serve": "concurrently \"npx tsc -w\"  \"nodemon dist/src/index.js\""
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "express-validator": "^6.15.0",
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "sequelize": "^6.29.0",
     "sqlite3": "^5.1.6",
     "typescript": "^4.9.5",
@@ -32,7 +34,10 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/passport": "^1.0.12",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/uuid": "^9.0.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prisma": "^4.11.0"
   }
 }
