--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "bcrypt": "^5.1.0",
-    "commander": "^10.0.0",
     "concurrently": "^7.6.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
+    "faker": "^6.6.6",
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -37,6 +37,7 @@
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/uuid": "^9.0.1",
+    "commander": "^10.0.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.11.0"
   }
