--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "express-validator": "^6.15.0",
     "faker": "^6.6.6",
     "google-auth-library": "^8.7.0",
+    "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "passport-google-oauth20": "^2.0.0",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.0",
     "sqlite3": "^5.1.6",
     "typescript": "^4.9.5",
