--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@prisma/client": "^4.11.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
@@ -22,7 +23,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
-    "faker": "^6.6.6",
+    "faker": "^5.5.3",
     "google-auth-library": "^8.7.0",
     "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
@@ -30,6 +31,7 @@
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.0",
     "sqlite3": "^5.1.6",
+    "tsyringe": "^4.7.0",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0"
   },
