--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
-    "start": "node dist/src/index.js",
+    "start": "node dist/index.js",
     "preserve": "npm run build",
-    "serve": "concurrently \"npx tsc -w\"  \"nodemon dist/src/index.js\""
+    "serve": "concurrently \"npx tsc -w\"  \"nodemon dist/index.js\""
   },
   "keywords": [],
   "author": "",
