--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@prisma/client": "^4.11.0",
+    "@tshio/command-bus": "^1.0.4",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "bcrypt": "^5.1.0",
