--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "preserve": "npm run build",
-    "serve": "concurrently \"npx tsc -w\"  \"nodemon dist/index.js\""
+    "serve": "concurrently \"npx tsc -w\"  \"nodemon dist/index.js\"",
+    "test": "mocha -r ts-node/register 'tests/**/*.test.ts'",
+    "test:watch": "mocha tests/todo.test.ts --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^4.12.0",
     "@tshio/command-bus": "^1.0.4",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
@@ -37,12 +39,20 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.4",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/mocha": "^10.0.1",
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
+    "@types/sinon": "^10.0.13",
     "@types/uuid": "^9.0.1",
+    "chai": "^4.3.7",
     "commander": "^10.0.0",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20",
-    "prisma": "^4.11.0"
+    "prisma": "^4.12.0",
+    "sinon": "^15.0.3",
+    "ts-node": "^10.9.1"
   }
 }
