--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,10 @@
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
     "types": [
-      "reflect-metadata"
+      "reflect-metadata",
+      "mocha",
+      "chai",
+      "sinon"
     ],
     /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
