--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,9 +7,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: Todo
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres-data:/var/lib/postgresql/data
     restart: unless-stopped
@@ -22,8 +22,8 @@ services:
     ports:
       - "5555:80"
     environment:
-      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_EMAIL: ${PG_ADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PG_ADMIN_PASSWORD}
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     restart: unless-stopped
@@ -37,7 +37,7 @@ services:
     depends_on:
       - postgres
     ports:
-      - "4000:4000"
+      - "${PORT_DOCKER}:${PORT_DCOKER}"
     restart: always
 
 volumes:
