--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.0",
+    "slack-notify": "^2.0.6",
     "sqlite3": "^5.1.6",
     "typescript": "^4.9.5",
     "uuid": "^9.0.0"
