--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "google-auth-library": "^8.7.0",
     "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.29.0",
