--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
-    "start": "node dist/index.js",
+    "start": "node dist/bin/index.js",
     "preserve": "npm run build",
-    "serve": "concurrently \"npx tsc -w\"  \"nodemon dist/index.js\"",
+    "serve": "concurrently \"npx tsc -w\"  \"nodemon dist/bin/index.js\"",
     "test": "mocha -r ts-node/register 'tests/**/*.test.ts'",
     "test:watch": "mocha tests/todo.test.ts --watch"
   },
