--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
     "@prisma/client": "^4.12.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.2",
     "bcrypt": "^5.1.0",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
@@ -29,6 +31,8 @@
     "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
+    "pino": "^8.12.0",
+    "pino-http": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "slack-notify": "^2.0.6",
     "typescript": "^4.9.5",
