--- a/package.json
+++ b/package.json
@@ -31,12 +31,11 @@
     "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
-    "pino": "^8.12.0",
-    "pino-http": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "slack-notify": "^2.0.6",
     "typescript": "^4.9.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
