--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
     "reflect-metadata": "^0.1.13",
+    "signale": "^1.4.0",
     "slack-notify": "^2.0.6",
     "typescript": "^4.9.5",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -44,6 +44,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
     "@types/passport": "^1.0.12",
+    "@types/signale": "^1.4.4",
     "@types/sinon": "^10.0.13",
     "@types/uuid": "^9.0.1",
     "chai": "^4.3.7",
