--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "signale": "^1.4.0",
     "slack-notify": "^2.0.6",
@@ -44,6 +45,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/mocha": "^10.0.1",
     "@types/passport": "^1.0.12",
+    "@types/passport-jwt": "^3.0.8",
     "@types/signale": "^1.4.4",
     "@types/sinon": "^10.0.13",
     "@types/uuid": "^9.0.1",
