--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "signale": "^1.4.0",
     "slack-notify": "^2.0.6",
     "typescript": "^4.9.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
